--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 .footer-container {
     background-color: rgb(255, 208, 0);
-    height: 670px;
+    height: 700px;
     padding: 4rem 0 2rem 0;
     display: flex;
     flex-direction: column;
@@ -14,10 +14,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-  
-    margin-bottom: 24px;
-    padding: 24px;
-    color: #fff;
+    /*color: #fff;*/
   }
   
   .footer-subscription > p {
