--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -100,6 +100,8 @@
   .social-media {
     max-width: 1000px;
     width: 100%;
+    background-color: rgb(255, 208, 0);
+    margin-bottom: 20;
   }
   
   .social-media-wrap {
